--- a/src/app/chat-modal/chat-modal.component.scss
+++ b/src/app/chat-modal/chat-modal.component.scss
@@ -17,3 +17,15 @@ video {
     }
   }
 }
+.top-video {
+  position: absolute;
+  top: 100px;
+  right: 100px;
+  max-width: 100px;
+  z-index: 2;
+}
+
+.main-video {
+  width: 100%;
+  max-height: 70%;
+}
