--- a/src/app/chat-modal/chat-modal.component.scss
+++ b/src/app/chat-modal/chat-modal.component.scss
@@ -1,7 +1,7 @@
-video {
-  width: 100%;
-  height: 80%;
-}
+// video {
+//   width: 100%;
+//   height: 80%;
+// }
 .button_wrap {
   text-align: center;
 
