--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,1 @@
-<button mat-button color="primary" (click)="openModal('abc')">Call To</button>
-<app-login></app-login>
+<router-outlet></router-outlet>
